Fix overflow behaviour for councils description

--- a/assets/css/councils.css
+++ b/assets/css/councils.css
@@ -38,8 +38,8 @@
     padding: 3vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     font-size: 20px;
+    overflow-y: auto;
 }
 
 #title__arrow {
